# expert-agent-engine

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.cursor/rules/: cursor_rules.mdc
config/: config.example.json  config.example.yaml  water_kefir_config.yaml
scripts/: PRD.txt
src/: agent_factory.py  cli.py  config_loader.py  context.py  conversation.py  engine.py  output_manager.py
